--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -42,7 +42,11 @@
                       <td><%= image_tag 'default.jpg', size: '40x40' %></td>
                       <td><%= assign.user.email %></td>
                       <td><%= link_to '削除', team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
-                      <td><%= link_to '権限移動', change_team_path(@team), change_owner_id: assign.user_id, method: :change_owner, class: 'btn btn-sm btn-info' %></td>
+                      <% if current_user.id == @team.owner_id %>
+                        <td><%= link_to '権限移動', change_team_path(@team), change_owner_id: assign.user_id, controller: 'teams', action: 'change', method: 'get', class: 'btn btn-sm btn-info' %></td>
+                      <% else %>
+                        <td></td>
+                      <% end %>
                     </tr>
                   <% end %>
                 </tbody>
