権限移動ボタンにparams[:id]を持たせた

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -43,7 +43,7 @@
                       <td><%= assign.user.email %></td>
                       <td><%= link_to '削除', team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
                       <% if current_user.id == @team.owner_id %>
-                        <td><%= link_to '権限移動', change_team_path(@team), change_owner_id: assign.user_id, controller: 'teams', action: 'change', method: 'get', class: 'btn btn-sm btn-info' %></td>
+                        <td><%= link_to '権限移動', change_team_path(assign), action: 'change', method: 'post', change_id: assign.user_id, class: 'btn btn-sm btn-info' %></td>
                       <% else %>
                         <td></td>
                       <% end %>
@@ -61,3 +61,4 @@
   </div>
   <!-- ./col -->
 </div>
+<%# <% binding.pry %> %>
