delete agenda mail機能実装

--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -34,9 +34,9 @@
               <i class="fa fa-circle-o nav-icon"></i>
               <p>
                 <%= agenda.title %>
-                <%# <%= link_to agenda_path(agenda), method: :delete do %> %>
-                  <%# <i class="fa fa-minus-square nav-icon"></i> %>
-                <%# <% end %> %>
+                <%= link_to agenda_path(agenda), method: :delete do %>
+                  <i class="fa fa-minus-square nav-icon"></i>
+                <% end %>
                 <i class="right fa fa-angle-left"></i>
               </p>
             </a>
