--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -34,8 +34,10 @@
               <i class="fa fa-circle-o nav-icon"></i>
               <p>
                 <%= agenda.title %>
-                <%= link_to agenda_path(agenda), method: :delete do %>
-                  <i class="fa fa-minus-square nav-icon"></i>
+                <% if current_user == @team.owner || (agenda.user_id == current_user.id) %>
+                  <%= link_to agenda_path(agenda), method: :delete do %>
+                    <i class="fa fa-minus-square nav-icon"></i>
+                  <% end %>
                 <% end %>
                 <i class="right fa fa-angle-left"></i>
               </p>
