削除ボタン位置調整

--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -32,13 +32,8 @@
           <li class="nav-item has-treeview menu-open">
             <a href="#" class="nav-link">
               <i class="fa fa-circle-o nav-icon"></i>
-              <p>
+              <p class="agenda-title">
                 <%= agenda.title %>
-                <% if current_user == @team.owner || (agenda.user_id == current_user.id) %>
-                  <%= link_to agenda_path(agenda), method: :delete do %>
-                    <i class="fa fa-minus-square nav-icon"></i>
-                  <% end %>
-                <% end %>
                 <i class="right fa fa-angle-left"></i>
               </p>
             </a>
@@ -55,6 +50,11 @@
                   <p>+ 記事を作成する</p>
                 <% end %>
               </li>
+                <% if current_user == agenda.team.owner || (agenda.user_id == current_user.id) %>
+                  <%= link_to agenda_path(agenda), method: :delete do %>
+                  <i class="pull-right fa fa-minus-square nav-icon" style="position: relative; right: 25px; bottom: 75px;"></i>
+                  <% end %>
+                <% end %>
             </ul>
           </li>
         <% end %>
