--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -43,7 +43,11 @@
                       <td><%= assign.user.email %></td>
                       <td><%= link_to '削除', team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
                       <% if current_user.id == @team.owner_id %>
-                        <td><%= link_to '権限移動', change_team_path(assign.user_id), action: 'change', method: 'post', id: assign.user_id, class: 'btn btn-sm btn-info' %></td>
+                        <% if assign.user_id == @team.owner_id %>
+                          <td></td>
+                        <% else %>
+                          <td><%= link_to '権限移動', change_team_path(assign.user_id), action: 'change', method: 'post', id: assign.user_id, class: 'btn btn-sm btn-info' %></td>
+                        <% end %>
                       <% else %>
                         <td></td>
                       <% end %>
@@ -61,4 +65,3 @@
   </div>
   <!-- ./col -->
 </div>
-<%# <% binding.pry %> %>
